checkpoint: reveal letter function working. to do: display correct letter spacing with for loop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,7 @@
-h1 {
+body {
     font-weight: bold;
     letter-spacing: 5px;
     font-size: 20px;
     padding:20px;
-}
-
-#word {
-    font-weight: bold;
     float: left;
-    height: 30px;
-}
-
-p {
-    float:left;
-    letter-spacing: 5px;
-    font-size: 20px;
-    padding:20px;
 }
